<?xml version="1.0"?>
<package format="2">
  <name>block_device</name>
  <version>1.0.0</version>
  <description>The block_device package</description>
  <maintainer email="A2020011@kookmin.ac.kr">Avees-Lab</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/hyeongyu-lee/block_device</url>
  <author email="A2020011@kookmin.ac.kr">Hyeongyu-Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>libopencv-dev</depend>
  <depend>libx11</depend>
  <depend>libxt-dev</depend>
  <depend>libxext</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>
  <depend>darknet_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
